Começo nova pagina Felipe

--- a/index.html
+++ b/index.html
@@ -1,88 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>YBYRA tech</title>
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./imgs/Nova logo Sem tech.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <title>ybyratech</title>
+</head>
+<body>
     <header>
-      <img src="./imgs/Nova logo.png" alt="" width="140px" />
-      <nav>
-        <a href="" style="margin-right: 70px"
-          >Conheça o App <img src="./imgs/angle down.png" alt="" width="20px"
-        /></a>
-
-        <a href="" style="margin-right: 70px;">Cadastre-se</a>
-        <button type="submit">
-          <a href="" style="color: aliceblue">Acesse sua conta</a>
-        </button>
-      </nav>
+        <img src="./imgs/Nova logo.png" alt="" width="130px">
+        <a href="" style="margin-left: 700px;">Conheça o App</a>
+        <a href="">Cadastre-se</a>
+        <button><a href="" style="color: aliceblue;font-size: 16  px;">Acesse a sua conta</a></button>
     </header>
-    <section id="sec1">
-      <div class="texto" style="margin-top: 40px;">
-        <h1>
-          “Toda produção eficiente começa<br />
-          com um ambiente inteligente”
-        </h1>
-        <p>
-          Transforme os dados da área de produção em
-          <strong>resumos inteligentes</strong>, gerencie relatórios e
-          planilhas, obtenha <strong>retornos personalizados</strong> e
-          <strong>sugestões de melhoria práticas</strong> com o nosso
-          aplicativo.
-        </p>
-      </div>
-      <div>
-        <img src="./imgs/Computador e celular nova.png" alt="" />
-      </div>
-    </section>
-    <section class="sec2">
-      <h1 style="font-size: 80px; margin-bottom: 30px">Inserção de Dados</h1>
-      <p style="font-size: 30px">Saiba como funciona →</p>
-    </section>
-    <section class="sec3">
-      <div style="margin-right: 500px;text-align: left;">
-        <h1 style="font-size: 50px; margin-bottom: 30px;">
-          Retornos Personalizados. <br />
-          Desempenho em Tempo Real.
-        </h1>
-        <p style="font-size: 20px;">Entenda sua planilha a fundo! →</p>
-      </div>
-    </section>
-    <section class="sec4" >
-      <div style="margin-top: 100px;">
-      <h1 style="font-size: 50px; margin-bottom: 30px;margin-right: 90px;">Instale o método de melhoria <br>
-        continua na sua indústria!</h1>
-        <p style="font-size: 16px; line-height: 30px;">Entenda a IA Preditiva, Soluções para melhorar o chão de fábrica <br> a um clique de distância  →</p>
-      </div>
-    </section>
-    <section class="sec5" style="background-color: aqua">
-      
-    </section>
-    <footer>
-      <div class="footerTRes">
-        <section>
-          <h2>Sobre nós</h2>
-          <p>Funcionalidades do App</p>
-          <br />
-          <p>Nossa equipe</p>
-        </section>
-        <section>
-          <h1>Contato</h1>
-          <p>ybyratech@gmail.com</p>
-          <br />
-          <p>+55 (11) 97710-6126</p>
-        </section>
-        <section>
-          <h1>Redes</h1>
-          <p>Instagram: @ybyra_ofc</p>
-          <br />
-          <p>LinkedIn: @ybyratech</p>
-        </section>
-      </div>
-      <h3>TODOS OS DIREITOS RESERVADOS YBYRA TECH © 2025</h3>
-    </footer>
-  </body>
+
+
+   <footer>
+  <section class="col1">
+    <h3>Sobre Nós</h3>
+    <p>Funcionalidades do App</p>
+    <p>Nossa Equipe</p>
+  </section>
+
+  <section class="col2">
+    <h3>Contato</h3>
+    <p>ybyratech@gmail.com</p>
+    <p>+55 (11) 97710-6126</p>
+  </section>
+
+  <section class="col3">
+    <h3>Redes</h3>
+    <p>Instagram: @ybyra_ofc</p>
+    <p>LinkedIn: @ybyratech</p>
+  </section>
+
+
+    <p class="direitos">TODOS OS DIREITOS RESERVADOS YBYRA TECH © 2025</p>
+
+</footer>
+
+</body>
 </html>
